--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ header .search {
     <div class="brand">
       <div class="logo">❤️</div>
       <div>
-        <div>Капелька счастья</div>
+        <div>Капелька счастья!</div>
         <div style="font-size:12px;color:rgba(255,255,255,0.9)">Магазин детской одежды</div>
       </div>
     </div>
