--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ header .search {
 
   <header>
     <div class="brand">
-      <div class="logo">❤️Test</div>
+      <div class="logo">❤️</div>
       <div>
         <div>Капелька счастья!</div>
         <div style="font-size:12px;color:rgba(255,255,255,0.9)">Магазин детской одежды</div>
@@ -256,7 +256,8 @@ header .search {
   </div>
 
   <script>
-   /***** ДАННЫЕ *****/
+  
+/***** ДАННЫЕ *****/
 const PRODUCTS = [
   {id:1,name:'Платье "Радуга" (2-3 года)',price:1590,age:'2-3 года',color:'Розовое',emoji:"👗"},
   {id:2,name:'Куртка зимняя (4-5 лет)',price:3590,age:'4-5 лет',color:'Синяя',emoji:"🧥"},
@@ -302,7 +303,7 @@ const adminCount = document.getElementById('adminCount');
 const nameInput = document.getElementById('nameInput');
 const phoneInput = document.getElementById('phoneInput');
 
-let editingId = null; // null = новый товар; иначе = id редактируемого товара
+let editingId = null;
 
 /***** УТИЛИТЫ *****/
 function getAllProducts(){ return [...PRODUCTS, ...CUSTOM_PRODUCTS]; }
@@ -325,7 +326,7 @@ function flash(text){
   setTimeout(()=> el.remove(),2000);
 }
 
-/***** РЕНДЕР КАТАЛОГА *****/
+/***** РЕНДЕР ТОВАРОВ *****/
 function renderProducts(list){
   productsRoot.innerHTML = '';
   if(list.length===0){
@@ -339,7 +340,7 @@ function renderProducts(list){
     else { thumbEl.innerHTML = `<div style="font-size:40px">${p.emoji || '👕'}</div>`; }
 
     node.querySelector('.title').textContent = p.name;
-    node.querySelector('.meta').textContent = (p.age ? p.age + ' · ' : '') + (p.color || '');
+    node.querySelector('.meta').textContent = (p.age||'') + ' · ' + (p.color||'');
     node.querySelector('.price').textContent = p.price + ' с';
     node.querySelector('.buy').addEventListener('click', ()=> addToCart(p.id));
     productsRoot.appendChild(node);
@@ -348,29 +349,39 @@ function renderProducts(list){
 
 /***** КОРЗИНА *****/
 function addToCart(id){
-  const all = getAllProducts();
-  const product = all.find(p=>p.id===id);
+  const product = getAllProducts().find(p=>p.id===id);
   if(!product) return;
+
   const item = CART[id] || { ...product, qty:0 };
   item.qty += 1;
   CART[id] = item;
   saveCart(); renderCart();
-  flash(`Добавлено: ${item.name}`);
 }
 
 function renderCart(){
   cartList.innerHTML = '';
   const items = Object.values(CART);
-  if(items.length === 0){
+
+  if(items.length===0){
     cartList.innerHTML = '<div style="color:var(--muted)">Корзина пуста</div>';
-    cartCount.textContent = 0; cartTotal.textContent = '0';
+    cartCount.textContent = 0;
+    cartTotal.textContent = 0;
     return;
   }
+
   let total = 0, qtySum = 0;
+
   items.forEach(it => {
-    total += it.price * it.qty; qtySum += it.qty;
-    const el = document.createElement('div'); el.className = 'cart-item';
-    const mini = it.image ? `<img src="${it.image}" alt="">` : `<div style="font-size:20px">${it.emoji||'👕'}</div>`;
+    total += it.price * it.qty;
+    qtySum += it.qty;
+
+    const el = document.createElement('div');
+    el.className = 'cart-item';
+
+    const mini = it.image 
+      ? `<img src="${it.image}">`
+      : `<div style="font-size:20px">${it.emoji||"👕"}</div>`;
+
     el.innerHTML = `
       <div class="mini">${mini}</div>
       <div style="flex:1">
@@ -383,191 +394,217 @@ function renderCart(){
           <div style="min-width:22px;text-align:center">${it.qty}</div>
           <button data-action="inc">+</button>
         </div>
-        <button data-action="remove" style="background:transparent;border:0;color:var(--danger);cursor:pointer">Удалить</button>
+        <button data-action="remove" style="background:none;border:0;color:var(--danger)">Удалить</button>
       </div>
     `;
-    el.querySelector('[data-action="inc"]').addEventListener('click', ()=> changeQty(it.id, it.qty+1));
-    el.querySelector('[data-action="dec"]').addEventListener('click', ()=> changeQty(it.id, it.qty-1));
-    el.querySelector('[data-action="remove"]').addEventListener('click', ()=>{
+
+    el.querySelector('[data-action="inc"]').onclick=()=> changeQty(it.id, it.qty+1);
+    el.querySelector('[data-action="dec"]').onclick=()=> changeQty(it.id, it.qty-1);
+    el.querySelector('[data-action="remove"]').onclick=()=>{
       delete CART[it.id]; saveCart(); renderCart();
-    });
+    };
+
     cartList.appendChild(el);
   });
-  cartCount.textContent = qtySum; cartTotal.textContent = total;
+
+  cartCount.textContent = qtySum;
+  cartTotal.textContent = total;
 }
 
-function changeQty(id, newQty){
-  if(newQty < 1){ delete CART[id]; } else { CART[id].qty = newQty; }
+function changeQty(id,newQty){
+  if(newQty<1){ delete CART[id]; }
+  else CART[id].qty = newQty;
   saveCart(); renderCart();
 }
 
 /***** ПОИСК *****/
-searchInput.addEventListener('input', ()=>{
-  const q = searchInput.value.trim().toLowerCase();
-  const filtered = getAllProducts().filter(
-    p => (p.name + ' ' + (p.age||'') + ' ' + (p.color||'')).toLowerCase().includes(q)
+searchInput.oninput = () => {
+  const q = searchInput.value.toLowerCase();
+  const filtered = getAllProducts().filter(p =>
+    `${p.name} ${p.age} ${p.color}`.toLowerCase().includes(q)
   );
   renderProducts(filtered);
-});
+};
 
-/***** КНОПКИ (корзина/чекаут) *****/
-document.getElementById('viewCartBtn').addEventListener('click', ()=> document.getElementById('cart').scrollIntoView({behavior:'smooth'}));
+/***** ЧЕКАУТ *****/
+document.getElementById('viewCartBtn').onclick=()=> 
+  document.getElementById('cart').scrollIntoView({behavior:'smooth'});
 
-document.getElementById('checkoutBtn').addEventListener('click', ()=>{
-  const name = nameInput.value.trim(); const contact = phoneInput.value.trim();
-  if(!name || !contact){ alert('Укажите имя и телефон/email.'); return; }
-  if(Object.values(CART).length === 0){ alert('Корзина пуста.'); return; }
-  alert("Спасибо! Заказ оформлен (демо).");
-  CART = {}; saveCart(); renderCart();
-  nameInput.value=''; phoneInput.value='';
-});
+document.getElementById('checkoutBtn').onclick=()=>{
+  if(!nameInput.value.trim() || !phoneInput.value.trim()){
+    alert("Введите имя и контакт!");
+    return;
+  }
+  if(Object.keys(CART).length===0){
+    alert("Корзина пуста");
+    return;
+  }
 
-document.getElementById('clearBtn').addEventListener('click', ()=> { if(confirm('Очистить корзину?')){ CART={}; saveCart(); renderCart(); } });
+  alert("Спасибо! Заказ отправлен (демо)");
+  CART={}; saveCart(); renderCart();
+};
 
-/***** ADMIN UI *****/
+document.getElementById('clearBtn').onclick=()=>{
+  if(confirm("Очистить корзину?")){
+    CART={}; saveCart(); renderCart();
+  }
+};
+
+/***** АДМИН-ПАНЕЛЬ *****/
 const ADMIN_PASSWORD = "12345";
 
-adminBtn.addEventListener('click', () => {
-  const pass = prompt("Введите пароль для входа в панель администратора:");
-  if(pass === ADMIN_PASSWORD){ openAdmin(); } else { alert("❌ Доступ запрещен!"); }
-});
-
-closeAdminBtn.addEventListener('click', ()=> closeAdmin());
-addNewBtn.addEventListener('click', ()=> startNewProduct());
+adminBtn.onclick = () => {
+  const pass = prompt("Введите пароль:");
+  if(pass === ADMIN_PASSWORD) openAdmin();
+  else alert("❌ Неверный пароль!");
+};
 
 function openAdmin(){
-  adminPanel.style.display = 'flex';
-  adminPanel.setAttribute('aria-hidden','false');
+  adminPanel.style.display='flex';
   renderAdminList();
-  startNewProduct();
+  resetForm();
 }
 
 function closeAdmin(){
-  adminPanel.style.display = 'none';
-  adminPanel.setAttribute('aria-hidden','true');
-  clearForm();
+  adminPanel.style.display='none';
+  editingId=null;
+}
+
+closeAdminBtn.onclick = closeAdmin;
+addNewBtn.onclick = () => startNewProduct();
+
+/***** Админ — работа с товарами *****/
+function renderAdminList(){
+  adminList.innerHTML='';
+  const all = getAllProducts();
+  adminCount.textContent = all.length;
+
+  all.forEach(p=>{
+    const el=document.createElement('div');
+    el.className='admin-item';
+
+    const img = p.image
+      ? `<img src="${p.image}">`
+      : `<div style="width:64px;height:64px;background:#e5e7eb;border-radius:8px;font-size:34px;display:flex;align-items:center;justify-content:center">${p.emoji||"👕"}</div>`;
+
+    el.innerHTML=`
+      ${img}
+      <div style="flex:1">
+        <div style="font-weight:700">${p.name}</div>
+        <div class="small">${p.price} с</div>
+      </div>
+      <div class="admin-actions">
+        <button class="btn" data-id="${p.id}">Ред.</button>
+      </div>
+    `;
+
+    el.querySelector('.btn').onclick = ()=> editProduct(p.id);
+    adminList.appendChild(el);
+  });
+}
+
+function resetForm(){
+  editingId=null;
+  aName.value='';
+  aPrice.value='';
+  aAge.value='';
+  aColor.value='';
+  aImage.value='';
+  imgPreview.style.display='none';
+  deleteProductBtn.style.display='none';
 }
 
 function startNewProduct(){
-  editingId = null;
-  deleteProductBtn.style.display = 'none';
-  saveProductBtn.textContent = 'Добавить';
-  clearForm();
+  resetForm();
+  editingId=null;
 }
 
-function clearForm(){
-  aName.value=''; aPrice.value=''; aAge.value=''; aColor.value='';
-  aImage.value=''; imgPreviewImg.src=''; imgPreview.style.display='none';
-}
+/***** загрузка фото *****/
+aImage.onchange = function(){
+  const file = aImage.files[0];
+  if(!file) return;
 
-/***** Превью изображения *****/
-aImage.addEventListener('change', (e)=>{
-  const file = e.target.files && e.target.files[0];
-  if(!file){ imgPreview.style.display='none'; imgPreviewImg.src=''; return; }
-  const maxMB = 5;
-  if(file.size > maxMB * 1024 * 1024){ alert(`Файл слишком большой — макс ${maxMB} MB`); aImage.value=''; return; }
   const reader = new FileReader();
-  reader.onload = function(ev){ imgPreviewImg.src = ev.target.result; imgPreview.style.display='block'; };
+  reader.onload = () => {
+    imgPreviewImg.src = reader.result;
+    imgPreview.style.display='block';
+  };
   reader.readAsDataURL(file);
-});
+};
 
-removePreviewBtn.addEventListener('click', ()=> clearForm());
+removePreviewBtn.onclick = ()=>{
+  imgPreview.style.display='none';
+  imgPreviewImg.src='';
+  aImage.value='';
+};
 
-/***** СОХРАНЕНИЕ И РЕДАКТИРОВАНИЕ *****/
-saveProductBtn.addEventListener('click', ()=>{
+/***** редактирование товара *****/
+function editProduct(id){
+  const p = getAllProducts().find(x=>x.id===id);
+  if(!p) return;
+
+  editingId = id;
+  aName.value = p.name;
+  aPrice.value = p.price;
+  aAge.value = p.age||"";
+  aColor.value = p.color||"";
+
+  if(p.image){
+    imgPreviewImg.src=p.image;
+    imgPreview.style.display='block';
+  } else imgPreview.style.display='none';
+
+  deleteProductBtn.style.display = id > PRODUCTS.length ? 'inline-block' : 'none';
+}
+
+/***** сохранение товара *****/
+saveProductBtn.onclick = () => {
   const name = aName.value.trim();
-  const price = Number(aPrice.value);
+  const price = +aPrice.value.trim();
   const age = aAge.value.trim();
   const color = aColor.value.trim();
-  if(!name || !price){ alert('Название и цена обязательны!'); return; }
 
-  const file = aImage.files && aImage.files[0];
-  if(file){
-    const reader = new FileReader();
-    reader.onload = function(ev){ finishSave({name,price,age,color,image:ev.target.result}); };
-    reader.readAsDataURL(file);
-  } else {
-    finishSave({name,price,age,color,image:null});
+  if(!name || !price){
+    alert("Введите название и цену!");
+    return;
   }
-});
 
-function finishSave({name,price,age,color,image}){
-  if(editingId){
-    const idx = CUSTOM_PRODUCTS.findIndex(x=>x.id===editingId);
-    if(idx===-1){ flash('Не найден товар'); return; }
-    const prev = CUSTOM_PRODUCTS[idx];
-    CUSTOM_PRODUCTS[idx] = { ...prev, name, price, age, color, image: image===null?prev.image:image, emoji: prev.emoji||'👕' };
-    flash('Товар обновлён');
-  } else {
+  let image = null;
+  if(imgPreviewImg.src) image = imgPreviewImg.src;
+
+  if(editingId === null){
     const newId = Date.now();
-    CUSTOM_PRODUCTS.push({id:newId,name,price,age,color,image:image||null,emoji:image?null:'👕'});
-    flash('Товар добавлен');
+    CUSTOM_PRODUCTS.push({id:newId,name,price,age,color,image,emoji:"👕"});
+  } else {
+    const i = CUSTOM_PRODUCTS.findIndex(p=>p.id===editingId);
+    if(i>=0){
+      CUSTOM_PRODUCTS[i] = {...CUSTOM_PRODUCTS[i],name,price,age,color};
+      if(image) CUSTOM_PRODUCTS[i].image=image;
+    }
   }
+
   saveCustom();
-  renderAdminList();
   renderProducts(getAllProducts());
-  clearForm();
-  deleteProductBtn.style.display='none';
-  saveProductBtn.textContent='Сохранить';
-  editingId = null;
-}
+  renderAdminList();
+  resetForm();
+};
 
-/***** РЕНДЕР СПИСКА В АДМИНКЕ *****/
-function renderAdminList(){
-  adminList.innerHTML = '';
-  adminCount.textContent = CUSTOM_PRODUCTS.length;
-  CUSTOM_PRODUCTS.slice().reverse().forEach(p=>{
-    const el = document.createElement('div'); el.className='admin-item';
-    const imgHtml = p.image?`<img src="${p.image}" alt="">`:`<div style="width:64px;height:64px;border-radius:8px;background:#fff;display:flex;align-items:center;justify-content:center;font-size:24px">${p.emoji||'👕'}</div>`;
-    el.innerHTML = `
-      ${imgHtml}
-      <div style="min-width:0">
-        <div style="font-weight:700;white-space:nowrap;overflow:hidden;text-overflow:ellipsis">${p.name}</div>
-        <div class="small">${p.price} с · ${(p.age||'')} · ${(p.color||'')}</div>
-      </div>
-      <div class="admin-actions">
-        <button data-id="${p.id}" class="btn edit-btn" style="background:#f3f4f6;color:var(--muted)">Ред.</button>
-        <button data-id="${p.id}" class="danger del-btn" title="Удалить">Удалить</button>
-      </div>
-    `;
-    adminList.appendChild(el);
-  });
+/***** Удаление товара *****/
+deleteProductBtn.onclick = () => {
+  if(editingId===null) return;
+  CUSTOM_PRODUCTS = CUSTOM_PRODUCTS.filter(p=>p.id!==editingId);
+  saveCustom();
+  renderProducts(getAllProducts());
+  renderAdminList();
+  resetForm();
+};
 
-  adminList.querySelectorAll('.edit-btn').forEach(b=>{
-    b.addEventListener('click', ()=> startEdit(Number(b.dataset.id)));
-  });
-  adminList.querySelectorAll('.del-btn').forEach(b=>{
-    b.addEventListener('click', ()=>{
-      const id = Number(b.dataset.id);
-      if(!confirm('Удалить товар?')) return;
-      CUSTOM_PRODUCTS = CUSTOM_PRODUCTS.filter(p=>p.id!==id);
-      saveCustom(); renderAdminList(); renderProducts(getAllProducts()); flash('Товар удалён');
-    });
-  });
-}
-
-function startEdit(id){
-  const item = CUSTOM_PRODUCTS.find(p=>p.id===id);
-  if(!item) return;
-  editingId = id;
-  aName.value = item.name||'';
-  aPrice.value = item.price||'';
-  aAge.value = item.age||'';
-  aColor.value = item.color||'';
-  if(item.image){ imgPreviewImg.src=item.image; imgPreview.style.display='block'; } else { imgPreviewImg.src=''; imgPreview.style.display='none'; }
-  deleteProductBtn.style.display='inline-block';
-  saveProductBtn.textContent='Обновить';
-  if(adminPanel.style.display!=='flex'){ openAdmin(); }
-  window.scrollTo({top:0,behavior:'smooth'});
-}
-
-/***** ИНИЦИАЛИЗАЦИЯ *****/
+/***** INIT *****/
 document.getElementById('year').textContent = new Date().getFullYear();
 renderProducts(getAllProducts());
 renderCart();
-renderAdminList();
 
-window.addEventListener('keydown', (e)=>{ if(e.key==='Escape'){ closeAdmin(); } });
+
 
     </script>
     
