--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@ header .search {
 
   <header>
     <div class="brand">
-      <div class="logo">❤️</div>
+      <div class="logo">❤️1</div>
       <div>
         <div>Капелька счастья!</div>
         <div style="font-size:12px;color:rgba(255,255,255,0.9)">Магазин детской одежды</div>
