--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <div class="brand">
       <div class="logo">❤️</div>
       <div>
-        <div>Капелька счастья!</div>
+        <div>Капелька счастья</div>
         <div style="font-size:12px;color:rgba(255,255,255,0.9)">Магазин детской одежды</div>
       </div>
     </div>
@@ -112,7 +112,7 @@
     </aside>
   </main>
 
-  <footer>© <span id="year"></span> Kids Boutique — шаблон</footer>
+  
 
   <template id="productTpl">
     <div class="card">
